--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
        
         <div class="home-content">
             <h3>Hello,It's me</h3>
-            <h1>Shreya B S</h1>
+            <h1>N V Adithya</h1>
             <h3>I am an <span>Software Developer</span></h3>
             <p>I grab things very quickly and I have a good leadership quality</p>
            
@@ -69,11 +69,11 @@
             <div class="edu-box">
                 <i class='bx bxs-school'></i>
                 <h2>Schooling</h2>
-                <h4>St. Mary's English high school,Bhadravathi</h4>
+                <h4>Vagdevi high school,Holalkere</h4>
                 <h2>P U C</h2>
-                <h4>Sri Adichunchangiri composite PU College,Bhadravathi</h4>
-                <h2>Degree[B C A]</h2>
-                <h4>S R N M College for Applied sciences,Shivamogga</h4>
+                <h4>sir MV PU College,Davangere</h4>
+                <h2>Degree[Bsc]</h2>
+                <h4>Government first grade college,Davangere</h4>
                 <h2>Master's[M C A]</h2>
                 <h4>R N S Institute of Technology,Banglore</h4>
             </div>
@@ -97,9 +97,9 @@
     <section class="contact" id="contact">
         <h2 class="heading">My<span> contact-Details</span></h2>
         <div class="social-media">
-            <a href="tel:8197291375"><i class='bx bxs-phone-call'></i></a>
+            <a href="tel:7090253419"><i class='bx bxs-phone-call'></i></a>
             <h2>8197291375</h2>
-            <a href="mailto:sonushreya3@gmail.com"><i class='bx bx-envelope'></i></a>
+            <a href="mailto:adithyaprince37.com"><i class='bx bx-envelope'></i></a>
             <h2>sonushreya3@gmail.com</h2>
             <a href="https://www.facebook.com/shreyabs.sonu?mibextid=ZbWKwL"><i class='bx bxl-facebook-circle'></i></a>
             <h2>Facebook</h2><br />
