--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
             <h2>8197291375</h2>
             <a href="mailto:adithyaprince37.com"><i class='bx bx-envelope'></i></a>
             <h2>sonushreya3@gmail.com</h2>
-            <a href="https://www.facebook.com/shreyabs.sonu?mibextid=ZbWKwL"><i class='bx bxl-facebook-circle'></i></a>
+            <a href="https://www.facebook.com/adithya.nv.1?mibextid=ZbWKwL"><i class='bx bxl-facebook-circle'></i></a>
             <h2>Facebook</h2><br />
-            <a href="https://instagram.com/sonushreya3?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D"><i class='bx bxl-instagram-alt'></i></a>
+            <a href="https://instagram.com/aditya_n_v_?igshid=NjIwNzIyMDk2Mg=="><i class='bx bxl-instagram-alt'></i></a>
             <h2>Instagram</h2><br />
-            <a href="https://www.linkedin.com/in/shreya-bs-30b055234"><i class='bx bxl-linkedin-square'></i></a>
+            <a href="https://www.linkedin.com/in/adithya-prince-6b1219238"><i class='bx bxl-linkedin-square'></i></a>
             <h2>LinkedIn</h2>
 
 
