--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="IMG_20230822_143209.jpg" width="300" height="500" />
+            <img src="WhatsApp Image 2023-08-25 at 20.27.55.jpeg" width="400" height="300" />
         </div>
 
         <div class="about-content">
