--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
         <div class="social-media">
             <a href="tel:7090253419"><i class='bx bxs-phone-call'></i></a>
             <h2>8197291375</h2>
-            <a href="mailto:adithyaprince37.com"><i class='bx bx-envelope'></i></a>
-            <h2>sonushreya3@gmail.com</h2>
+            <a href="mailto:adithyaprince37@gmail.com"><i class='bx bx-envelope'></i></a>
+            <h2>adithyaprince37@gmail.com</h2>
             <a href="https://www.facebook.com/adithya.nv.1?mibextid=ZbWKwL"><i class='bx bxl-facebook-circle'></i></a>
             <h2>Facebook</h2><br />
             <a href="https://instagram.com/aditya_n_v_?igshid=NjIwNzIyMDk2Mg=="><i class='bx bxl-instagram-alt'></i></a>
