--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">SHREYA B S</a>
+        <a href="#" class="logo">N V Adithya</a>
         <i class='bx bx-menu' id="menu-icon"></i>
 
         <nav class="navbar">
