--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
             <h2>4.sql</h2>
             <h2>5.html</h2>
             <h2>6.css</h2>
+            <h2>7.Manual Testing</h2>
+            <h2>8.Automation</h2>
         </div>
     </section>
 
