--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="home-content">
             <h3>Hello,It's me</h3>
             <h1>N V Adithya</h1>
-            <h3>I am an <span>Software Developer</span></h3>
+            <h3>I am an <span>Software Test Engineer</span></h3>
             <p>I grab things very quickly and I have a good leadership quality</p>
            
             <a href="#" class="btn"></a>
@@ -47,12 +47,12 @@
 
         <div class="about-content">
             <h2 class="heading">About<span> Me</span></h2>
-            <h3>Software Developer</h3>
+            <h3>Software Tester</h3>
             <p>
-                Motivated and hardworking individual with a passion for software development
+                Motivated and hardworking individual with a passion for software Tester
                 seeks hands-on experience with a team of professionals.
-                Strong understanding of software development concepts and eagerness to learn new technologies.
-                Recent graduate with a degree in computer science and a passion for software development.
+                Strong understanding of software Testing concepts and eagerness to learn new technologies.
+                Recent graduate with a degree in computer science and a passion for software Testing.
                 I am interested in studying Computer Science because I find it fascinating.
                 When I was a child, I was absolutely attracted by computer games and later it was programming.
                 I also like studying maths and physics, but I chose computing as my career because of its opening,
@@ -84,14 +84,12 @@
         <h2 class="heading">My<span> Skills</span></h2>
         <div class="skill-con">
             <i class='bx bx-code-curly'></i>
-            <h2>1.C</h2>
-            <h2>2.C++</h2>
+            <h2>1.Manual Testing</h2>
+            <h2>2.SQL</h2>
             <h2>3.Java</h2>
-            <h2>4.sql</h2>
+            <h2>4.Automation Testing</h2>
             <h2>5.html</h2>
             <h2>6.css</h2>
-            <h2>7.Manual Testing</h2>
-            <h2>8.Automation</h2>
         </div>
     </section>
 
@@ -101,7 +99,7 @@
         <div class="social-media">
             <a href="tel:7090253419"><i class='bx bxs-phone-call'></i></a>
             <h2>7090253419</h2>
-            <a href="mailto:adithyaprince37@gmail.com"><i class='bx bx-envelope'></i></a>
+            <a href="mailto:mca.adithyanv@gmail.com"><i class='bx bx-envelope'></i></a>
             <h2>adithyaprince37@gmail.com</h2>
             <a href="https://www.facebook.com/adithya.nv.1?mibextid=ZbWKwL"><i class='bx bxl-facebook-circle'></i></a>
             <h2>Facebook</h2><br />
